--- a/ng-dashboard/src/styles.css
+++ b/ng-dashboard/src/styles.css
@@ -1,10 +1,58 @@
 /* You can add global styles to this file, and also import other style files */
+@import "https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300;400;500;700&display=swap";
 * {
   margin: 0;
   padding: 0;
+}
+:root {
+  --white: #ffffff;
+  --dark-white: #fafafa;
+  --light-pink: rgb(254, 243, 239);
+  --dark-pink: rgb(249, 211, 198);
+  --dark-green: rgb(45, 202, 115);
+  --light-green: rgb(201, 240, 219);
+  --green: rgb(231, 255, 241);
+  --light-blue: rgb(236, 249, 255);
+  --dark-blue: rgb(147, 222, 254);
+  --black: rgb(28, 45, 65);
+  --dark-black: #484848;
+  --light-black: #989898;
+  --dark-gray: #e0e0e0;
+  --light-gray: #f5f5f5;
 }
 html,
 body {
   height: 100%;
   width: 100%;
+  font-family: "M PLUS Rounded 1c", sans-serif;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+[nz-typography] {
+  color: var(--dark-black) !important;
+}
+.spacer {
+  flex: 1 1 auto;
+}
+p,
+span,
+ul,
+li,
+a {
+  font-size: 16px;
+  color: var(--light-black);
+}
+.button {
+  background: var(--dark-green);
+  font-family: "M PLUS Rounded 1c", sans-serif;
+  border: none;
+  border-radius: 4px;
+  font-weight: 500;
+  padding: 8px 32px;
+  font-size: 16px;
+  color: var(--dark-white);
 }
