Login modal integrated with banner component but some icons not work

--- a/ng-dashboard/src/app/components/banner/banner.component.html
+++ b/ng-dashboard/src/app/components/banner/banner.component.html
@@ -18,8 +18,8 @@
           <li nz-menu-item>For Agents</li>
           <li nz-menu-item>Search Properties</li>
           <li nz-menu-item>FAQ</li>
-          <li nz-menu-item>Login</li>
-          <li nz-menu-item>Join</li>
+          <li nz-menu-item (click)="login()">Login</li>
+          <li nz-menu-item (click)="register()">Join</li>
         </ul>
       </nz-dropdown-menu>
     </span>
