--- a/ng-dashboard/src/styles.css
+++ b/ng-dashboard/src/styles.css
@@ -56,3 +56,10 @@ a {
   font-size: 16px;
   color: var(--dark-white);
 }
+[nz-input]:hover {
+  border: 1px solid var(--light-black) !important;
+}
+[nz-input]:focus {
+  border: 1px solid var(--light-black) !important;
+  box-shadow: none !important;
+}
