Logo name is updated

--- a/ng-dashboard/src/app/components/banner/banner.component.html
+++ b/ng-dashboard/src/app/components/banner/banner.component.html
@@ -1,6 +1,6 @@
 <section class="banner">
   <div class="nav">
-    <h3 nz-typography>LOGO</h3>
+    <h3 nz-typography>Roomers</h3>
     <span class="spacer"></span>
     <span>
       <button
