different types of custom button made

--- a/ng-dashboard/src/app/components/banner/banner.component.html
+++ b/ng-dashboard/src/app/components/banner/banner.component.html
@@ -28,7 +28,7 @@
     <h1 nz-typography>
       Close leases faster get free referencing and save rentors money.
     </h1>
-    <button class="button">Signup for Patch</button>
+    <button class="button but-lg but-green">Signup for Patch</button>
   </div>
   <div class="none"></div>
 </section>
