--- a/ng-dashboard/src/app/components/home-footer/home-footer.component.html
+++ b/ng-dashboard/src/app/components/home-footer/home-footer.component.html
@@ -1,7 +1,9 @@
 <footer class="home-footer">
   <div>
     <span>
-      <h3 nz-typography>Patch made apartment hunting and renting easy.</h3>
+      <h3 nz-typography>
+        Roomers dekho made apartment hunting and renting easy.
+      </h3>
     </span>
     <span>
       <h4 nz-typography>Community</h4>
