--- a/ng-dashboard/src/app/components/service/service.component.html
+++ b/ng-dashboard/src/app/components/service/service.component.html
@@ -1,7 +1,7 @@
 <section class="service">
   <div>
     <h1 nz-typography>It's time to forget about deposits.</h1>
-    <button class="button">Get your deposit</button>
+    <button class="button but-lg but-green">Get your deposit</button>
   </div>
   <ul>
     <li>
