--- a/ng-dashboard/src/app/components/work/work.component.html
+++ b/ng-dashboard/src/app/components/work/work.component.html
@@ -28,6 +28,6 @@
       come to Patch. <br />
       A simple, streamlined process for you and the tenants.
     </p>
-    <button class="button">Book a Demo</button>
+    <button class="button but-lg but-black">Book a Demo</button>
   </span>
 </section>
