--- a/ng-dashboard/src/app/components/middle-banner/middle-banner.component.html
+++ b/ng-dashboard/src/app/components/middle-banner/middle-banner.component.html
@@ -3,6 +3,6 @@
     <h1 nz-typography>
       No need to ask landloards to for go the deposit
     </h1>
-    <button class="button">Get Start</button>
+    <button class="button but-lg but-green">Get Start</button>
   </div>
 </section>
