--- a/ng-dashboard/src/styles.css
+++ b/ng-dashboard/src/styles.css
@@ -47,14 +47,49 @@ a {
   color: var(--light-black);
 }
 .button {
-  background: var(--dark-green);
   font-family: "M PLUS Rounded 1c", sans-serif;
   border: none;
-  border-radius: 4px;
+  border-radius: 3px;
   font-weight: 500;
-  padding: 8px 32px;
+  padding: 5px 18px;
   font-size: 16px;
+  background: none;
+}
+.but-lg {
+  padding: 8px 32px;
+  font-size: 20px;
+}
+.but-sm {
+  padding: 4px 14px;
+  font-size: 12px;
+}
+.but-green {
+  background: var(--dark-green);
   color: var(--dark-white);
+  border: 1px solid var(--dark-green);
+}
+.but-pink {
+  background: var(--dark-pink);
+  color: var(--dark-black);
+  border: 1px solid var(--dark-pink);
+}
+.but-blue {
+  background: var(--dark-blue);
+  color: var(--dark-black);
+  border: 1px solid var(--dark-blue);
+}
+.but-black {
+  background: var(--dark-black);
+  color: var(--dark-white);
+  border: 1px solid var(--dark-black);
+}
+.button:focus {
+  outline: none;
+  opacity: 0.9;
+  box-shadow: 0px 1px 3px var(--dark-gray);
+}
+.bordered:focus {
+  box-shadow: none;
 }
 [nz-input]:hover {
   border: 1px solid var(--light-black) !important;
