--- a/ng-dashboard/src/styles.css
+++ b/ng-dashboard/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import "https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300;400;500;700&display=swap";
+@import url("https://fonts.googleapis.com/css2?family=Spartan:wght@300;400;500;600&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -19,21 +19,46 @@
   --light-black: #989898;
   --dark-gray: #e0e0e0;
   --light-gray: #f5f5f5;
+  --custom-font: "Spartan", sans-serif;
 }
 html,
 body {
   height: 100%;
   width: 100%;
-  font-family: "M PLUS Rounded 1c", sans-serif;
+  font-family: var(--custom-font);
 }
 h1,
 h2,
 h3,
 h4,
 h5,
-h6,
-[nz-typography] {
-  color: var(--dark-black) !important;
+h6 {
+  color: var(--dark-black);
+  font-weight: 500;
+}
+h1 {
+  font-size: 36px;
+  line-height: 50px;
+}
+h2 {
+  font-size: 32px;
+  line-height: 45px;
+}
+h3 {
+  font-size: 28px;
+  line-height: 40px;
+}
+h4 {
+  font-size: 24px;
+  line-height: 35px;
+}
+h5 {
+  font-size: 20px;
+  line-height: 30px;
+}
+h6 {
+  font-size: 16px;
+  line-height: 25px;
 }
 .spacer {
   flex: 1 1 auto;
@@ -47,7 +72,7 @@ a {
   color: var(--light-black);
 }
 .button {
-  font-family: "M PLUS Rounded 1c", sans-serif;
+  font-family: var(--custom-font);
   border: none;
   border-radius: 3px;
   font-weight: 500;
