--- a/ng-dashboard/src/styles.css
+++ b/ng-dashboard/src/styles.css
@@ -68,24 +68,25 @@ span,
 ul,
 li,
 a {
+  font-weight: 300;
   font-size: 16px;
   color: var(--light-black);
 }
 .button {
   font-family: var(--custom-font);
   border: none;
-  border-radius: 3px;
-  font-weight: 500;
-  padding: 5px 18px;
-  font-size: 16px;
+  font-weight: 400;
+  border-radius: 2px;
+  padding: 9px 18px 6px 18px;
+  font-size: 15px;
   background: none;
 }
 .but-lg {
-  padding: 8px 32px;
-  font-size: 20px;
+  padding: 10px 28px 6px 28px;
+  font-size: 18px;
 }
 .but-sm {
-  padding: 4px 14px;
+  padding: 6px 13px 4px 13px;
   font-size: 12px;
 }
 .but-green {
