fix some content via fontsize and removed some unused code

--- a/ng-dashboard/src/app/components/features/features.component.html
+++ b/ng-dashboard/src/app/components/features/features.component.html
@@ -1,27 +1,28 @@
 <section class="features">
   <div class="inner_feature">
     <span>
-      <h2 nz-typography>A faster close</h2>
+      <h3>A faster close</h3>
       <p>
         Patch makes properties more attractive to more renters; it's that
         simple. And becaouse tenants don't need to find huge sums of money up
         front they're more likely to be interested in the in one of your
         listings.
       </p>
-      <h4 nz-typography>
+      <h6>
         Patch makes properties more attractive, so close faster
-      </h4>
+      </h6>
     </span>
+    <br />
     <span>
-      <h2 nz-typography>No need to ask landloards to for go the deposit</h2>
+      <h3>No need to ask landloards to for go the deposit</h3>
       <p>
         You will always receive a cash deposit on behalf of a tenant.It's as
         simple as that, no over-complicated insurances, no security bonds, just
         happy landloard's receiving cash funds each and every time.
       </p>
-      <h4 nz-typography>
+      <h6>
         Patch will always send you a cash deposit on a tenant's behalf
-      </h4>
+      </h6>
     </span>
   </div>
   <div class="inner_feature">
