--- a/ng-dashboard/src/app/components/home-footer/home-footer.component.html
+++ b/ng-dashboard/src/app/components/home-footer/home-footer.component.html
@@ -1,12 +1,12 @@
 <footer class="home-footer">
   <div>
     <span>
-      <h3 nz-typography>
+      <h4>
         Roomers dekho made apartment hunting and renting easy.
-      </h3>
+      </h4>
     </span>
     <span>
-      <h4 nz-typography>Community</h4>
+      <h5>Community</h5>
       <ul>
         <li>For Tenants</li>
         <li>For Landlords</li>
@@ -16,7 +16,7 @@
       </ul>
     </span>
     <span>
-      <h4 nz-typography>About Us</h4>
+      <h5>About Us</h5>
       <ul>
         <li>Our Story</li>
         <li>Meet the Team</li>
@@ -24,9 +24,9 @@
       </ul>
     </span>
     <span>
-      <h4 nz-typography>Stay up to date</h4>
+      <h5>Stay up to date</h5>
       <p>Subscribe to our news letter to receive our weekly feed</p>
     </span>
   </div>
-  <p>2020 @Patch All rights reserved</p>
+  <p>2020 @Roomers All rights reserved</p>
 </footer>
