--- a/ng-dashboard/src/app/components/question/question.component.html
+++ b/ng-dashboard/src/app/components/question/question.component.html
@@ -1,5 +1,5 @@
 <section class="questions">
-  <h1 nz-typography>Frequently Asked Questions</h1>
+  <h1>Frequently Asked Questions</h1>
   <nz-collapse [nzBordered]="false" id="collapse">
     <nz-collapse-panel
       #p
