--- a/ng-dashboard/src/app/components/work/work.component.html
+++ b/ng-dashboard/src/app/components/work/work.component.html
@@ -1,5 +1,5 @@
 <section class="working">
-  <h2 nz-typography>How does it's work ?</h2>
+  <h2>How does it's work ?</h2>
   <div class="working-inner">
     <div>
       <span class="working-step">1</span><br />
