--- a/ng-dashboard/src/app/components/work/work.component.css
+++ b/ng-dashboard/src/app/components/work/work.component.css
@@ -23,11 +23,12 @@
   background: var(--white);
   color: var(--black);
   width: 50px;
-  height: 50px;
-  font-size: 24px;
+  height: 48px;
+  font-size: 22px;
   border-radius: 25px;
   display: grid;
   place-items: center;
+  padding-top: 5px;
 }
 .working > .working-inner > div:hover {
   transition: all 0.2ms ease-in-out;
