--- a/ng-dashboard/src/app/components/banner/banner.component.html
+++ b/ng-dashboard/src/app/components/banner/banner.component.html
@@ -28,6 +28,7 @@
     <h1>
       Close leases faster get free referencing and save rentors money.
     </h1>
+    <app-searchbar></app-searchbar>
     <button class="button but-lg but-green">Signup for Patch</button>
   </div>
   <div class="none"></div>
