--- a/ng-dashboard/src/app/components/register/register.component.html
+++ b/ng-dashboard/src/app/components/register/register.component.html
@@ -1,5 +1,5 @@
 <section class="demo-banner">
-  <h2 nz-typography>Register</h2>
+  <h4>Create an account</h4>
   <form>
     <nz-input-group [nzSuffix]="userName" nzSize="large">
       <input type="text" nz-input placeholder="Enter your name" />
@@ -41,10 +41,14 @@
     </ng-template>
   </form>
   <div *nzModalFooter class="data">
-    <button class="button" (click)="destroyModal()">
+    <button class="button but-sm but-white" (click)="destroyModal()">
       Cancel
     </button>
-    <button type="button" class="button" (click)="destroyModal()">
+    <button
+      type="button"
+      class="button but-sm but-green"
+      (click)="destroyModal()"
+    >
       Submit
     </button>
   </div>
