--- a/ng-dashboard/src/app/components/banner/banner.component.css
+++ b/ng-dashboard/src/app/components/banner/banner.component.css
@@ -1,19 +1,51 @@
 /*Nav*/
 .nav {
   display: flex;
-  align-items: baseline;
+  justify-content: center;
+  align-items: center;
+  padding: 0 20px;
 }
-[nz-menu-item]:hover {
-  background: var(--green);
+[nz-menu] {
+  border: none;
+  display: block !important;
+}
+[nz-menu-item] {
+  font-weight: 400;
+}
+.feather {
+  width: 24px;
+  height: 24px;
+  stroke: currentColor;
+  stroke-width: 1.5;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: none;
+  color: var(--dark-black);
+}
+[nz-menu-item]:focus {
+  border-right: none;
   color: var(--dark-green);
 }
+[nz-menu-item]:hover,
+[nz-menu-item]:focus {
+  background: var(--green);
+  color: var(--dark-black);
+  border-bottom: 2px solid var(--dark-green);
+}
 .menu-button {
-  font-size: 16px;
-  padding: 5px 16px 4px 16px;
-  background: var(--white);
-  border: none;
+  padding: 5px 10px;
+  background: var(--light-gray);
+  border: 1px solid var(--light-black);
   border-radius: 3px;
+  display: grid;
+  place-items: center;
   font-family: "M PLUS Rounded 1c", sans-serif;
+}
+[nz-icon] {
+  margin-right: 6px;
+  font-size: 24px;
+  background: red;
+  z-index: 10;
 }
 /*Banner*/
 .banner {
@@ -28,8 +60,8 @@
   height: 110%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  padding: 50px 100px;
+  justify-content: center;
+  padding: 0 100px;
 }
 .banner-content {
   width: 450px;
@@ -37,13 +69,25 @@
 .banner h1 {
   color: var(--dark-gray) !important;
 }
+.mobile-menu {
+  display: none;
+}
+.desktop-menu {
+  display: block;
+}
+@media only screen and (max-width: 968px) {
+  .mobile-menu {
+    display: block;
+  }
+  .desktop-menu {
+    display: none !important;
+  }
+}
 @media only screen and (max-width: 768px) {
   .banner {
+    justify-content: flex-end;
     padding: 30px 15px;
     height: 80%;
-  }
-  .none {
-    display: none;
   }
   .banner-content {
     width: auto;
