--- a/ng-dashboard/src/app/components/banner/banner.component.html
+++ b/ng-dashboard/src/app/components/banner/banner.component.html
@@ -1,5 +1,11 @@
 <div class="nav">
-  <h5>Roomers</h5>
+  <a href="#" class="logo"
+    ><img
+      src="../../../assets/logo/logo.png"
+      width="180px"
+      height="auto"
+      alt="Roomers Logo"
+  /></a>
   <span class="spacer"></span>
   <div class="mobile-menu">
     <button
@@ -35,7 +41,10 @@
 <section class="banner">
   <div class="banner-content">
     <h1>
-      Close leases faster get free referencing and save rentors money.
+      Close leases <br />
+      Faster get free <br />
+      Referencing and save<br />
+      rentors money.
     </h1>
     <button class="button but-lg but-green">Signup for Patch</button>
   </div>
