dashboard create and basic features added

--- a/ng-dashboard/src/app/components/login/login.component.html
+++ b/ng-dashboard/src/app/components/login/login.component.html
@@ -28,11 +28,7 @@
     <button class="button but-sm but-white" (click)="destroyModal()">
       Cancel
     </button>
-    <button
-      type="button "
-      class="button but-sm but-green"
-      (click)="destroyModal()"
-    >
+    <button type="button " class="button but-sm but-green" (click)="login()">
       Submit
     </button>
   </div>
