--- a/ng-dashboard/src/app/dashboard/dashboard.component.html
+++ b/ng-dashboard/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,44 @@
-<p>dashboard works!</p>
+<nz-layout class="layout">
+  <nz-sider
+    nzCollapsible
+    nzBreakpoint="lg"
+    [nzCollapsedWidth]="0"
+    class="left-side-menu"
+  >
+    <div class="logo">
+      <img
+        src="../../assets/logo/logo.png"
+        width="150px"
+        height="auto"
+        alt="Roomers Logo"
+      />
+    </div>
+    <ul nz-menu nzMode="inline" nzTheme="light">
+      <li nz-menu-item>
+        <span>Dashboard</span>
+      </li>
+      <li nz-menu-item>
+        <span>Profile</span>
+      </li>
+      <li nz-menu-item>
+        <span>List</span>
+      </li>
+      <li nz-menu-item>
+        <span>Setting</span>
+      </li>
+    </ul>
+  </nz-sider>
+  <nz-layout>
+    <nz-header>
+      <span class="spacer"></span>
+      <i data-feather="bell" class="icon"></i>
+      <i data-feather="log-out"></i>
+    </nz-header>
+    <nz-content>
+      <div class="inner-content">
+        Content
+      </div>
+    </nz-content>
+    <nz-footer>All coypright is reserves by Roomers ©2020</nz-footer>
+  </nz-layout>
+</nz-layout>
