--- a/ng-dashboard/src/styles.css
+++ b/ng-dashboard/src/styles.css
@@ -129,3 +129,13 @@ a {
   border: 1px solid var(--light-black) !important;
   box-shadow: none !important;
 }
+.feather {
+  width: 28px;
+  height: 28px;
+  stroke: currentColor;
+  stroke-width: 1.5;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  fill: none;
+  color: var(--dark-black);
+}
